fix svg shift on IOS devices

--- a/src/5.entities/CartPizzaItem/ui/CartPizzaItem.module.scss
+++ b/src/5.entities/CartPizzaItem/ui/CartPizzaItem.module.scss
@@ -101,6 +101,7 @@
 .increaseBtn {
   width: 30px;
   height: 30px;
+  padding: 0;
   color: var(--brave-orange);
   border: 2px solid currentColor;
   border-radius: 50%;
